--- a/index.html
+++ b/index.html
@@ -34,10 +34,21 @@
         button:hover {
             background: #555;
         }
+        .label {
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
+            pointer-events: none;
+        }
         @media (max-width: 768px) {
             button {
                 padding: 8px 15px;
                 font-size: 14px;
+            }
+            .label {
+                font-size: 12px;
             }
         }
     </style>
@@ -49,6 +60,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/renderers/CSS2DRenderer.js"></script>
     <script>
         // Initialisation de la scène
         const scene = new THREE.Scene();
@@ -58,10 +70,17 @@
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(0, 5, 15);
 
-        // Rendu
+        // Rendu WebGL
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
+
+        // Rendu CSS2D pour les labels
+        const labelRenderer = new THREE.CSS2DRenderer();
+        labelRenderer.setSize(window.innerWidth, window.innerHeight);
+        labelRenderer.domElement.style.position = 'absolute';
+        labelRenderer.domElement.style.top = '0px';
+        document.body.appendChild(labelRenderer.domElement);
 
         // Contrôles OrbitControls
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
@@ -115,8 +134,17 @@
                 plane.rotation.x = (Math.random() - 0.5) * 0.3;
                 plane.rotation.y = (Math.random() - 0.5) * 0.3;
                 
+                // Ajout d'un label
+                const labelDiv = document.createElement('div');
+                labelDiv.className = 'label';
+                labelDiv.textContent = 'Description de l\'image';
+                labelDiv.style.display = 'none'; // Caché par défaut
+                const label = new THREE.CSS2DObject(labelDiv);
+                label.position.set(0, -2, 0); // Sous l'image
+                plane.add(label);
+
                 scene.add(plane);
-                planes.push({ mesh: plane, angle: angle, isSelected: false });
+                planes.push({ mesh: plane, angle: angle, isSelected: false, label: label });
 
                 // Animation fade-in
                 let opacity = 0;
@@ -166,10 +194,12 @@
                 // Désélectionner l'image précédente
                 if (selectedPlane) {
                     selectedPlane.isSelected = false;
+                    selectedPlane.label.element.style.display = 'none';
                 }
                 // Trouver le plan correspondant dans le tableau
                 const clickedPlane = planes.find(p => p.mesh === plane);
                 clickedPlane.isSelected = true;
+                clickedPlane.label.element.style.display = 'block'; // Afficher le label
                 selectedPlane = clickedPlane;
                 // Calculer la position cible pour la caméra
                 targetPosition = plane.position.clone().add(new THREE.Vector3(0, 0, 5));
@@ -211,6 +241,7 @@
             targetLookAt = null;
             if (selectedPlane) {
                 selectedPlane.isSelected = false;
+                selectedPlane.label.element.style.display = 'none';
                 selectedPlane = null;
             }
         });
@@ -220,6 +251,7 @@
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
+            labelRenderer.setSize(window.innerWidth, window.innerHeight);
         });
 
         // Boucle d'animation
@@ -229,6 +261,7 @@
             animateCamera();
             controls.update();
             renderer.render(scene, camera);
+            labelRenderer.render(scene, camera);
         }
         animate();
     </script>
