--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
             { url: 'carte_châtellerault.jpg', desc: 'Historic map of the region' },
             { url: 'https://picsum.photos/400/300?random=3', desc: 'Scenic landscape' },
             { url: 'https://picsum.photos/400/300?random=4', desc: 'Urban exploration' },
-            { url: 'https://picsum.photos/400/300?random=5', desc: 'Natural beauty' }
+            { url: 'https://picsum.photos/400/300?random=5', desc: 'Natural beauty' },
+            { url: 'carte_chatellerault2.PNG', desc: 'Another view of Châtellerault' }
         ];
 
         // Création des plans pour les images
