--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             { url: 'https://picsum.photos/400/300?random=3', desc: 'Scenic landscape' },
             { url: 'https://picsum.photos/400/300?random=4', desc: 'Urban exploration' },
             { url: 'https://picsum.photos/400/300?random=5', desc: 'Natural beauty' },
-            { url: 'carte_chatellerault2.PNG', desc: 'Another view of Châtellerault' }
+            { url: 'carte_chatellerault2.png', desc: 'Another view of Châtellerault' }
         ];
 
         // Création des plans pour les images
