--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             { url: 'https://picsum.photos/400/300?random=3', desc: 'Scenic landscape' },
             { url: 'https://picsum.photos/400/300?random=4', desc: 'Urban exploration' },
             { url: 'https://picsum.photos/400/300?random=5', desc: 'Natural beauty' },
-            { url: 'carte_chatellerault2.webp', desc: 'Another view of Châtellerault' }
+            { url: 'carte_chatellerault2.webp', desc: 'Another view of Châtellerault' },
+            { url: 'Marseille.webp', desc: 'Vibrant cityscape of Marseille' }
         ];
 
         // Création des plans pour les images
