--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             { url: 'https://picsum.photos/400/300?random=4', desc: 'Urban exploration' },
             { url: 'https://picsum.photos/400/300?random=5', desc: 'Natural beauty' },
             { url: 'carte_chatellerault2.webp', desc: 'Another view of Châtellerault' },
-            { url: 'Marseille.webp', desc: 'Vibrant cityscape of Marseille' }
+            { url: 'Marseille.png', desc: 'Réseaux routiers de la ville de Marseille' }
         ];
 
         // Création des plans pour les images
