--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             { url: 'carte_chatellerault.webp', desc: 'A beautiful view of Châtellerault' },
             { url: 'carte_châtellerault.webp', desc: 'Historic map of the region' },
             { url: 'tenerife.jpg', desc: 'San Cristóbal de La Laguna, a historic town in northern Tenerife' },
-            { url: 'ameagement.JPG', desc: 'Plan d’aménagement urbain détaillé' },
+            { url: 'amenagement.JPG', desc: 'Plan d’aménagement urbain détaillé' },
             { url: 'meriadek.jpg', desc: 'Vue du quartier Mériadeck à Bordeaux' },
             { url: 'Marseille.webp', desc: 'Vibrant cityscape of Marseille' },
             { url: 'chaban.webp', desc: 'Pont Chaban-Delmas, Bordeaux’s iconic vertical-lift bridge over the Garonne' },
