--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
             let currentText = '';
             let charIndex = 0;
             plane.text.material.opacity = 1; // Texte visible dès le début
+            
+            // Calculer le délai par caractère pour une durée totale de ~2.5 secondes
+            const totalDuration = 2500; // 2.5 secondes
+            const textLength = formattedText.length;
+            const delayPerChar = Math.min(50, Math.max(10, totalDuration / textLength)); // Entre 10ms et 50ms
+            
             const write = () => {
                 if (charIndex < formattedText.length) {
                     currentText += formattedText[charIndex];
@@ -244,7 +250,7 @@
                     plane.text.geometry.dispose();
                     plane.text.geometry = newGeometry;
                     charIndex++;
-                    setTimeout(write, 8); // Vitesse triplée (25ms -> 8ms)
+                    setTimeout(write, delayPerChar); // Délai dynamique
                 }
             };
             write();
